[package]
name = "ddns-route53"
description = "Sets DNS records in AWS Route 53 to the local host's public IP."
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-route53 = "1"
chrono = "0.4.38"
clap = { version = "4", features = ["derive"] }
reqwest = "0.12"
tokio = { version = "1", features = ["full"] }
