[package]
name = "ddns-route53"
description = "A tiny daemon that updates DNS records in AWS Route 53 with your public IP whenever it changes."
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-route53 = "1"
chrono = "0.4.38"
clap = { version = "4", features = ["derive"] }
reqwest = "0.12"
tokio = { version = "1", features = ["full"] }
